@@ -7,6 +7,14 @@ Regina - A Normal Surface Theory Calculator
     For general highlights of the changes between releases, see
     HIGHLIGHTS.txt in the same directory as this file.
 
+Current Development Version
+    ENGINE:
+        Class NLayeredSolidTorus:
+            - Added routine flatten() to flatten a layered solid torus
+              to a Mobius band.
+        Class NNormalSurface, NNormalSurfaceVector:
+            - Added routine isCentral() to test for central surfaces.
+
 Version 3.96  [ 31 October, 2003 ] - Second prerelease for version 4.0.
     OVERALL:
         - Added surface filter documentation to the reference manual,
